fixed navbar on mobile

--- a/src/components/navbar/index.module.scss
+++ b/src/components/navbar/index.module.scss
@@ -93,7 +93,7 @@ nav {
       list-style: none;
       text-align: center;
       width: 60vw;
-      justify-content: flex-end;
+      justify-content: center;
 
       .links {
         height: 80px;
